# gopress

./: .env  .prettierignore  Cargo.toml  DEVELOPER.md  Taskfile.yml  docker-compose.yml
.github/workflows/: rust.yml
migration/: README.md
src/: main.rs  routes.rs
static/css/: tailwind.css
templates/: edit.html.tera  index.html.tera  layout.html.tera  new.html.tera
templates/admin/: 404.html.tera  admin-layout.html.tera  backdrop.html.tera  cta.html.tera  macros.html.tera  sidebar.html.tera
templates/admin/pages/: home.html.tera  posts.html.tera
