[package]
name = "blogging"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Luz <pedromsluz@gmail.com>"]
publish = false

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-http = "2"
actix-web = "3"
actix-flash = "0.2"
actix-files = "0.5"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
tera = "1.8.0"
dotenv = "0.15"
listenfd = "0.3.3"
serde = "1.0.197"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "^0.9.0" # sea-orm version
features = [
  "debug-print",
  "runtime-async-std-native-tls",
  "sqlx-mysql",
  # "sqlx-postgres",
  # "sqlx-sqlite",
]
